# SampleClassification

./: LICENSE  Makefile  README.md  pyproject.toml
environments/: Dockerfile
environments/cpu/: docker-compose.yaml
environments/gpu/: docker-compose.yaml
src/lambda/: handlers.py
src/ml/data/: base.py  cifar10.py
src/ml/models/: classifier.py
src/scripts/: predict.py
