[tool.poetry]
name = "sample-classification"
version = "0.1.0"
description = "Sample CIFAR-10 classifier."
license = "MIT"
authors = ["yoshihiro fukuhara <gatheluck@gmail.com>"]
maintainers = ["yoshihiro fukuhara <gatheluck@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.12.1"
torchvision = "^0.13.1"
pytorch-lightning = "^1.7.7"
scipy = "<1.9.3"
albumentations = "^1.3.0"
omegaconf = "^2.2.3"
pydantic = "^1.10.2"

[tool.poetry.group.dev.dependencies]
mypy = {extras = ["pydantic"], version = "^0.982"}
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest-cov = "^4.0.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = 3.8
# following setting is same as pysen
# https://github.com/pfnet/pysen/blob/main/setup.cfg#L12
check_untyped_defs = true
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

plugins = [
  "pydantic.mypy"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
